objects/LLC_BI__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time between periodic rate changes.</description>
        <inlineHelpText>Specifies the period of time between periodic rate changes.</inlineHelpText>
        <label>Rate Change Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies how often the variable rate can change.</description>
        <inlineHelpText>Specifies how often the variable rate can change.</inlineHelpText>
        <label>Rate Change Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>At any time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Disclosure_As_Of_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the date the on-request account disclosure was created. The rate(s) are accurate as of this date.</description>
        <inlineHelpText>The date the on-request account disclosure was created. The rate(s) are accurate as of this date.</inlineHelpText>
        <label>Rate Disclosure As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the rate type that applies to the account.</description>
        <inlineHelpText>Specifies the rate type that will apply to the account.</inlineHelpText>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Tier A</fullName>
                </value>
                <value>
                    <fullName>Tier B</fullName>
                </value>
                <value>
                    <fullName>Stepped</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Related_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional although it is automatically set during the CD Renewal Workflow. This field associates two deposit accounts.</description>
        <label>Related Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Related Deposits</relationshipLabel>
        <relationshipName>Related_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the interest rate at which the account will be renewed.</description>
        <inlineHelpText>Specifies the interest rate at which the account will be renewed.</inlineHelpText>
        <label>Renewal Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Basis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the new interest or dividend rate upon automatic renewal.</description>
        <inlineHelpText>The new interest or dividend rate upon automatic renewal.</inlineHelpText>
        <label>Renewal Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Number__c</fullName>
        <description>--DEPRECATED-- (Replacing with Routing_Transit_Number__c) -- Populate this number (9-digit) field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>-D Routing Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Transit_Number__c</fullName>
        <description>Populate this text field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Security_Deposit_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the amount of any security deposit for the safe deposit box.</description>
        <inlineHelpText>The amount of any security deposit for the safe deposit box.</inlineHelpText>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Single_Life_Expectancy_Begins__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the year in which single life expectancy payments must begin.</description>
        <inlineHelpText>The year in which single life expectancy payments must begin.</inlineHelpText>
        <label>Single Life Expectancy Begins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Size_of_Box__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the size of the safe deposit box that is being leased.</description>
        <inlineHelpText>The size of the safe deposit box that is being leased.</inlineHelpText>
        <label>Size of Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the stage that the deposit is in.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Charged Off</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Escheat</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the status that the deposit is in.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding step.</description>
        <inlineHelpText>The interest rate that applies to the corresponding step.</inlineHelpText>
        <label>Step Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the corresponding step rate applies.</description>
        <inlineHelpText>Specifies the period of time the corresponding step rate will apply.</inlineHelpText>
        <label>Step Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the corresponding stepped rate applies.</description>
        <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
        <label>Step Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TFA_Activity_Type__c</fullName>
        <description>TFA Activity Type</description>
        <inlineHelpText>This indicates the type of activity that will be performed for the plan.</inlineHelpText>
        <label>TFA Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open a new plan</fullName>
                </value>
                <value>
                    <fullName>Manage or maintain an existing plan</fullName>
                </value>
                <value>
                    <fullName>Close an existing plan</fullName>
                    <isActive>false</isActive>
                    <label>Close an existing plan</label>
                </value>
                <value>
                    <fullName>Request information for an existing plan</fullName>
                    <isActive>false</isActive>
                    <label>Request information for an existing plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Year_of_First_Roth_Contribution__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the tax year of first Roth IRA contribution or conversion.</description>
        <inlineHelpText>The tax year of first Roth IRA contribution or conversion.</inlineHelpText>
        <label>Tax Year of First Roth Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Type__c</fullName>
        <description>This picklist field is required for CD&apos;s and is manually populated. The picklist values are the time periods used to describe the length of a certificate term. It is used in conjunction with the number field that specifies the number of terms.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>day(s)</fullName>
                </value>
                <value>
                    <fullName>month(s)</fullName>
                </value>
                <value>
                    <fullName>quarter(s)</fullName>
                </value>
                <value>
                    <fullName>year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</description>
        <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
        <label>Tiered Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vault_Key_Description__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes any vault keys that have been issued for the safe deposit box.</description>
        <inlineHelpText>A description of any vault keys that have been issued for the safe deposit box.</inlineHelpText>
        <label>Vault Key Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isConvert__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a hidden field used for reporting purposes, such as number of deposits converted from a lead.</description>
        <label>isConvert</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This manually populated field is an external, unique key. This field is used to link the deposit in nCino to the deposit in the financial institution’s Core.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loan_Providing_Overdraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the loan or line of credit providing overdraft protection to this deposit.</inlineHelpText>
        <label>Loan Providing Overdraft</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_times_OD_in_Last_12_months__c</fullName>
        <inlineHelpText>This field will be fed from your deposit accounting or core system.  This can help drive my decisions to pay or return items.</inlineHelpText>
        <label>Number of times OD in Last 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdraft_Availability__c</fullName>
        <formula>Overdraft_Limit__c -  Overdraft_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdraft Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdraft_Limit__c</fullName>
        <formula>Loan_Providing_Overdraft__r.LLC_BI__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdraft Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdraft_Used__c</fullName>
        <formula>Loan_Providing_Overdraft__r.LLC_BI__Principal_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdraft Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Interest_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Interest Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_O__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reg O</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKDDP__Denial_Notice_Type__c</fullName>
        <description>The user or system populates this optional picklist that specifies the denial notice for the account holder.</description>
        <inlineHelpText>Select the account holder&apos;s denial reason from the picklist.</inlineHelpText>
        <label>Denial Notice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to Approve</fullName>
                </value>
                <value>
                    <fullName>Partial Approval</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Joint_Owners_Have_ROS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate that joint owners have rights of suvivorship between them. By default, it is false.</description>
        <inlineHelpText>Select this field if joint owners have rights of survivorship.</inlineHelpText>
        <label>Joint Owners have ROS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKDDP__MultiParty_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this boolean field to determine if the Texas Multiple Party Account Disclosure document applies. This is required for banks and optional for credit unions. By default, it is false.</description>
        <inlineHelpText>Select this checkbox if the Texas Multiple Party Account Disclosure document applies.</inlineHelpText>
        <label>MultiParty Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKDDP__Multiple_Party_Terms_Change__c</fullName>
        <description>Users select Single Party or All Parties from this optional picklist to determine a single person can or all parties must change the terms of a multiple party agreement.</description>
        <inlineHelpText>Select Single Party or All Parties to determine if a single party can or all parties must change the terms of a multiple party agreement.</inlineHelpText>
        <label>Multiple Party Terms Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Party</fullName>
                </value>
                <value>
                    <fullName>All Parties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Temporary_Account_Agreement_Indictor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field when a temporary account agreement is used for the account. By default, it is false.</description>
        <inlineHelpText>Select the checkbox when a temporary account agreement is used for the account.</inlineHelpText>
        <label>Temporary Account Agreement Indictor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawls_previous_12_months__c</fullName>
        <description>Number of Withdrawals within the last 12 months</description>
        <label># Withdrawals previous 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deposit</label>
    <nameField>
        <label>Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <recordTypes>
        <fullName>CD_Record_Type</fullName>
        <active>true</active>
        <description>Record Type for CD Page Layout</description>
        <label>CD Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CheckingDDARecordType</fullName>
        <active>true</active>
        <description>Record type for Checking/DDA Accounts</description>
        <label>Checking/DDA Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>IRA_CD_Record_Type</fullName>
        <active>true</active>
        <description>Record Type for IRA CD Page Layout</description>
        <label>IRA Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Savings_Record_Type</fullName>
        <active>true</active>
        <description>Record Type for Savings Page Layout</description>
        <label>Savings Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Interest_Rate_Override</fullName>
        <active>true</active>
        <errorConditionFormula>Override_Interest_Rate__c  = TRUE  &amp;&amp;  ISPICKVAL(Interest_Rate_Override__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Interest_Rate_Override__c</errorDisplayField>
        <errorMessage>If Interest rate override is selected, an overridden interest rate must be selected.</errorMessage>
    </validationRules>
</CustomObject>